--- a/style.css
+++ b/style.css
@@ -35,11 +35,14 @@ body{
     padding-left: 5px;
 }
 .Option:hover{
-    background-color: green;
+    background-color: grey;
+    opacity: 0.6;
 }
 .Next_Save_button{
     padding: 10px 10px;
-    background-color: rgb(0, 26, 255);
+    background-color: grey;
+    opacity: 0.9;
+/*rgb(0, 26, 255)*/
 }
 .Next_Save_button input:hover{
     background-color: black;
